# tui-toolbox-installer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
interneto_install/: __init__.py  __main__.py  app.py  commands.py  data.py  detect.py  favorites.py  icons.py  runner.py
interneto_install/data/: browser-extensions-pkgs.json  config.json  desktop-pkgs.json  favorites.json  icons.json  lib-pkgs.json  mobile-pkgs.json  vscode-extensions-pkgs.json
scripts/: install.ps1  install.sh  sync_pkgs.py
tests/: test_smoke.py
