[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "interneto-install"
version = "0.1.0"
description = "Cross-platform TUI that autodetects your OS and installs Interneto toolbox packages."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "textual>=0.60",
]

[project.scripts]
interneto-install = "interneto_install.__main__:main"

[tool.setuptools]
packages = ["interneto_install"]

[tool.setuptools.package-data]
interneto_install = ["data/*.json"]
