[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "interneto-install"
version = "0.1.0"
description = "Cross-platform TUI that autodetects your OS and installs Interneto toolbox packages."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "David7ce" }]
keywords = ["tui", "installer", "package-manager", "textual", "interneto"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Installation/Setup",
]
dependencies = [
    # Tested against textual 8.2.x; the grid/Collapsible/SelectionList APIs used
    # here are not guaranteed on much older releases.
    "textual>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/interneto/tui-toolbox-installer"
Repository = "https://github.com/interneto/tui-toolbox-installer"

[project.scripts]
interneto-install = "interneto_install.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["interneto_install"]

[tool.setuptools.package-data]
interneto_install = ["data/*.json"]
